name:                haskell-webframework-sample
version:             0.1.0.0
synopsis:            Haskell Web Framework Sample
description:         Please see README.md
homepage:            http://github.com/eiel/haskell-webframework-sample
license:             BSD3
license-file:        LICENSE
author:              Tomohiko Himura
maintainer:          eiel.hal@gmail.com
copyright:           2010 Tomohiko Himura
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-webframework-sample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, scotty, text, aeson, Spock, bytestring, yesod
